--- a/mkdocs (copie).yml
+++ b/mkdocs (copie).yml
@@ -1,7 +1,8 @@
 site_name: Exploration du Web
 site_description: Cours participatif sur le Web.
 site_author: Etudiants participant au cours.
-pages:
+
+nav:
   - Home: index.md
   - Cours: cours/index.md
   - Contribuer:
@@ -14,5 +15,9 @@ pages:
   - A propos: about/about.md
 
 
+theme:
+    name: mkdocs
+    custom_dir: custom_theme/
 
+lang: fr
 copyright: <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
