--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,6 @@ pages:
       - Séance 2: deroule/seance2.md
   - A propos: about/about.md
 
-
+extra_css: [extra.css]
 
 copyright: <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
