--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,9 @@ pages:
   - Déroulé:
       - Séance 1: deroule/seance1.md
       - Séance 2: deroule/seance2.md
+      - Séance 3: deroule/seance3.md
+      - Séance 4: deroule/seance4.md
+
   - A propos: about/about.md
 
 extra_css: [extra.css]
