--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
       - Séance 3: deroule/seance3.md
       - Séance 4: deroule/seance4.md
       - Séance 5: deroule/seance5.md
+      - Séance 6: deroule/seance6.md
 
   - A propos: about/about.md
 
