suite à discussion plénière 2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Home: index.md
   - Cours:
       - cours/html.md
+      - cours/Recherche_sur_le_Web.md
       - cours/javascript.md
       - cours/deepweb.md
       - Sessions précédentes: cours/index.md
@@ -21,7 +22,6 @@ nav:
       - Séance 5: deroule/seance5.md
       - Séance 6: deroule/seance6.md
       - Séance 9: deroule/seance9.md
-
   - A propos: about/about.md
 
 extra_css: [extra.css]
