Ajout du cours sur Django

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
       - cours/Recherche_sur_le_Web.md
       - cours/javascript.md
       - cours/deepweb.md
+      - cours/django.md
       - Sessions précédentes: cours/index.md
   - Contribuer:
       - Définir le contenu : contribuer/contenu.md
